[package]
name = "rnatui"
version = "0.1.2"
edition = "2024"
description = "Ratatui based UI for NetActuate API using rnaapi library"
license = "MIT"

[dependencies]
clap = "4.5.51"
reqwest = "0.12.24"
rnaapi = "0.5.0"
serde = { version = "1.0.228", features = ["derive", "default"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
