[package]
name = "rnatui"
version = "0.1.3"
edition = "2024"
description = "Ratatui based UI for NetActuate API using rnaapi library"
license = "MIT"

[dependencies]
clap = "4.5.51"
reqwest = "0.12.24"
rnaapi = "0.6.0"
serde = { version = "1.0.228", features = ["derive", "default"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
anyhow = "1.0.100"
